mik-sdk-macros/tests/ui/fetch/duplicate_option.stderr
error: Duplicate 'headers' field. Each field can only appear once.
 --> tests/ui/fetch/duplicate_option.rs:7:9
  |
7 |         headers: { "B": "2" }
  |         ^^^^^^^
